# teledomrust

./: Cargo.toml
src/: lib.rs  main.rs  test.rs
templates/: airsmellmenu.stpl  editdatamenu.stpl  editpointmenu.stpl  mainmenu.stpl  senddatamenu.stpl
templates/editdatamenu/: editdatamenu.stpl
templates/editdatamenu/sql/: airsmellcount.stpl
templates/test/: message_view.xml  photo_view.xml
